header section added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,28 @@
     <title>Organic | Juno College Project One</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <a href="#">
+                <img src="./assets/logo.png" alt="#">
+            </a>
+            <ul>
+                <li>
+                    <a href="#">Home</a>
+                </li>
+                <li>
+                    <a href="#">Blog</a>
+                </li>
+                <li>
+                    <a href="#">Contact</a>
+                </li>
+            </ul>
+        </nav>
+        <div class="hero">
+            <h1>Providing Tasty & Healthy Food</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum alias provident quas beatae libero sint ducimus, possimus tenetur quis dolor ipsam voluptatem voluptas vel. Totam doloremque ullam magnam quidem! Fugit?</p>
+            <button>Shop Now</button>
+        </div>
+    </header>
 </body>
 </html>
