--- a/index.html
+++ b/index.html
@@ -33,5 +33,20 @@
             <button>Shop Now</button>
         </div>
     </header>
+
+    <main>
+        <section id="about" class="about">
+            <div class="textContainer">
+                <h2>About us</h2>
+                <h3>Providing Best Organic Products.</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus porro eveniet sit tempora? Minus sunt quidem libero, reprehenderit vel illo commodi laborum tenetur error deleniti perferendis ipsum, quo autem atque!</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora, modi fuga laudantium adipisci incidunt voluptate consequatur eveniet minus voluptatibus id?</p>
+                <button>Shop Now</buutton>
+            </div>
+            <div class="factContainer">
+                <p>We've been providing the best best service for 20 years.</p>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
