--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <main>
         <section id="about" class="about">
-            <div class="textContainer">
+            <div class="aboutTextContainer">
                 <h2>About us</h2>
                 <h3>Providing Best Organic Products.</h3>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus porro eveniet sit tempora? Minus sunt quidem libero, reprehenderit vel illo commodi laborum tenetur error deleniti perferendis ipsum, quo autem atque!</p>
@@ -45,6 +45,107 @@
             </div>
             <div class="factContainer">
                 <p>We've been providing the best best service for 20 years.</p>
+            </div>
+        </section>
+
+        <section id="products" class="product">
+            <div>
+                <h2>Our products</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla amet exercitationem itaque est nihil mollitia.</p>
+            </div>
+            <div>
+                <ul>
+                    <li>
+                        <div class="imageContainer">
+                            <img src="./assets/product1.jpeg" alt="#">
+                        </div>
+                        <div class="productInfoContainer">
+                            <h3>Mix Vegetables</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            <p>$370 <span>$350</span></p>
+                            <button>Add to cart</button>
+                        </div>
+                    </li><li>
+                        <div class="imageContainer">
+                            <img src="./assets/product2.jpeg" alt="#">
+                        </div>
+                        <div class="productInfoContainer">
+                            <h3>Mix Vegetables</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            <p>$370 <span>$350</span></p>
+                            <button>Add to cart</button>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="imageContainer">
+                            <img src="./assets/product3.jpeg" alt="#">
+                        </div>
+                        <div class="productInfoContainer">
+                            <h3>Mix Vegetables</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            <p>$370 <span>$350</span></p>
+                            <button>Add to cart</button>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="imageContainer">
+                            <img src="./assets/product4.jpeg" alt="#">
+                        </div>
+                        <div class="productInfoContainer">
+                            <h3>Mix Vegetables</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            <p>$370 <span>$350</span></p>
+                            <button>Add to cart</button>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="imageContainer">
+                            <img src="./assets/product5.jpeg" alt="#">
+                        </div>
+                        <div class="productInfoContainer">
+                            <h3>Mix Vegetables</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            <p>$370 <span>$350</span></p>
+                            <button>Add to cart</button>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="imageContainer">
+                            <img src="./assets/product6.jpeg" alt="#">
+                        </div>
+                        <div class="productInfoContainer">
+                            <h3>Mix Vegetables</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            <p>$370 <span>$350</span></p>
+                            <button>Add to cart</button>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="imageContainer">
+                            <img src="./assets/product7.jpeg" alt="#">
+                        </div>
+                        <div class="productInfoContainer">
+                            <h3>Mix Vegetables</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            <p>$370 <span>$350</span></p>
+                            <button>Add to cart</button>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="imageContainer">
+                            <img src="./assets/product8.jpeg" alt="#">
+                        </div>
+                        <div class="productInfoContainer">
+                            <h3>Mix Vegetables</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            <p>$370 <span>$350</span></p>
+                            <button>Add to cart</button>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <div>
+                <button>Load more</button>
             </div>
         </section>
     </main>
