--- a/index.html
+++ b/index.html
@@ -148,6 +148,55 @@
                 <button>Load more</button>
             </div>
         </section>
+
+        <section id="gallery" class="gallery">
+            <div class="topGallery">
+                <h2>Our gallery</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, tempore molestiae dolor cupiditate blanditiis accusantium?</p>
+                <div>
+                    <button>All</button>
+                    <button>Business</button>
+                    <button>Development</button>
+                    <button>Technology</button>
+                    <button>Agency</button>
+                </div>
+            </div>
+            <div class="mainGallery">
+                <ul class="col3">
+                    <li>
+                        <img src="./assets/gallery1.jpg" alt="">
+                    </li>
+                    <li>
+                        <img src="./assets/gallery2.jpg" alt="">
+                    </li>
+                    <li>
+                        <img src="./assets/gallery3.jpg" alt="">
+                    </li>
+                </ul>
+                <ul class="col2">
+                    <li>
+                        <img src="./assets/gallery4.jpg" alt="">
+                    </li>
+                    <li>
+                        <img src="./assets/gallery5.jpg" alt="">
+                    </li>
+                </ul>
+                <ul class="col3">
+                    <li>
+                        <img src="./assets/gallery6.jpg" alt="">
+                    </li>
+                    <li>
+                        <img src="./assets/gallery7.jpg" alt="">
+                    </li>
+                    <li>
+                        <img src="./assets/gallery8.jpg" alt="">
+                    </li>
+                </ul>
+            </div>
+            <div class="bottomGallery">
+                <button>load more</button>
+            </div>
+        </section>
     </main>
 </body>
 </html>
