added blog section

--- a/index.html
+++ b/index.html
@@ -197,6 +197,46 @@
                 <button>load more</button>
             </div>
         </section>
+
+        <section id="news" class="news">
+            <div>
+                <h2>Latest news</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi maxime deserunt quas debitis consequuntur, unde molestiae natus totam nemo qui.</p>
+            </div>
+            <ul>
+                <li>
+                    <div class="newsImageContainer">
+                        <img src="./assets/blog1.jpg">
+                    </div>
+                    <div>
+                        <h3>Lorem ipsum, dolor sit amet consectetur adipisicing.</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime modi quo dolor!</p>
+                        <button>Read more</button>
+                    </div>
+                </li>
+                <li>
+                    <div class="newsImageContainer">
+                        <img src="./assets/blog2.jpg">
+                    </div>
+                    <div>
+                        <h3>Lorem ipsum, dolor sit amet consectetur adipisicing.</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime modi quo dolor!</p>
+                        <button>Read more</button>
+                    </div>
+                </li>
+                <li>
+                    <div class="newsImageContainer">
+                        <img src="./assets/blog3.jpg">
+                    </div>
+                    <div>
+                        <h3>Lorem ipsum, dolor sit amet consectetur adipisicing.</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime modi quo dolor!</p>
+                        <button>Read more</button>
+                    </div>
+                </li>
+            </ul>
+        </section>
+
     </main>
 </body>
 </html>
