added footer section

--- a/index.html
+++ b/index.html
@@ -237,6 +237,100 @@
             </ul>
         </section>
 
+        <footer>
+            <div>
+                <img src="./assets/logo-white.png">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum amet a non sapiente perspiciatis. Dignissimos amet quidem modi sapiente!</p>
+                <nav>
+                    <ul>
+                        <li>
+                            <a href="#"></a>
+                        </li>
+                        <li>
+                            <a href="#"></a>
+                        </li>
+                        <li>
+                            <a href="#"></a>
+                        </li>
+                        <li>
+                            <a href="#"></a>
+                        </li>
+                        <li>
+                            <a href="#"></a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+            <div>
+                <h3>Quick links</h3>
+                <nav>
+                    <ul>
+                        <li>
+                            <a href="#">About us</a>
+                        </li>
+                        <li>
+                            <a href="#">Our product</a>
+                        </li>
+                        <li>
+                            <a href="#">Our blog</a>
+                        </li>
+                        <li>
+                            <a href="#">Contact us</a>
+                        </li>
+                        <li>
+                            <a href="#">Become a member</a>
+                        </li>
+                        <li>
+                            <a href="#">Case studies</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+            <div>
+                <h3>Recent products</h3>
+                <ul>
+                    <li>
+                        <div class="">
+                            <img src="./assets/product8.jpeg" alt="#">
+                        </div>
+                        <div>
+                            <p>Fresh vegetable</p>
+                            <p>$13</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="">
+                            <img src="./assets/product7.jpeg" alt="#">
+                        </div>
+                        <div>
+                            <p>Fresh fruit</p>
+                            <p>$13</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="">
+                            <img src="./assets/product5.jpeg" alt="#">
+                        </div>
+                        <div>
+                            <p>Fresh bean</p>
+                            <p>$13</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <div>
+                <h3>Subscribe</h3>
+                <h4>Address:</h4>
+                <p>5919 Trussville Crossings Pkwy <br> Birmingham AL 35235</p>
+                <h4>Phone</h4>
+                <p>+88016888005654</p>
+                <form action="#" method="#" name="subscribeForm">
+                    <label for ="email"></label>
+                    <input type="text" id="email" class="email" name="email" placeholder="Enter Email...">
+                </form>
+            </div>
+            <p>Coded by <a href="#">Erika David</a>. Copyright &#169 <a href="https://www.junocollege.com" target="_blank">Juno College</a>. All rights reserved.</p>
+        </footer>
     </main>
 </body>
 </html>
