corrected end of main section, fixed indentation, added notes

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>Organic | Juno College Project One</title>
 </head>
 <body>
+    <!-- beginning of header section -->
     <header>
         <nav>
             <a href="#">
@@ -33,8 +34,11 @@
             <button>Shop Now</button>
         </div>
     </header>
+    <!-- end of header section -->
 
+    <!-- beginning of main section -->
     <main>
+        <!-- beginning of about section -->
         <section id="about" class="about">
             <div class="aboutTextContainer">
                 <h2>About us</h2>
@@ -47,7 +51,9 @@
                 <p>We've been providing the best best service for 20 years.</p>
             </div>
         </section>
+        <!-- end of about section -->
 
+        <!-- beginning of product section -->
         <section id="products" class="product">
             <div>
                 <h2>Our products</h2>
@@ -148,7 +154,9 @@
                 <button>Load more</button>
             </div>
         </section>
+        <!-- end of about section -->
 
+        <!-- beginning of gallery section -->
         <section id="gallery" class="gallery">
             <div class="topGallery">
                 <h2>Our gallery</h2>
@@ -197,8 +205,10 @@
                 <button>load more</button>
             </div>
         </section>
+        <!-- end of gallery section -->
 
-        <section id="news" class="news">
+        <!-- beginning of blog section -->
+        <section id="blog" class="blog">
             <div>
                 <h2>Latest news</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi maxime deserunt quas debitis consequuntur, unde molestiae natus totam nemo qui.</p>
@@ -236,101 +246,105 @@
                 </li>
             </ul>
         </section>
+        <!-- beginning of blog section -->
+    </main>
+    <!-- end of main  -->
 
-        <footer>
-            <div>
-                <img src="./assets/logo-white.png">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum amet a non sapiente perspiciatis. Dignissimos amet quidem modi sapiente!</p>
-                <nav>
-                    <ul>
-                        <li>
-                            <a href="#"></a>
-                        </li>
-                        <li>
-                            <a href="#"></a>
-                        </li>
-                        <li>
-                            <a href="#"></a>
-                        </li>
-                        <li>
-                            <a href="#"></a>
-                        </li>
-                        <li>
-                            <a href="#"></a>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
-            <div>
-                <h3>Quick links</h3>
-                <nav>
-                    <ul>
-                        <li>
-                            <a href="#">About us</a>
-                        </li>
-                        <li>
-                            <a href="#">Our product</a>
-                        </li>
-                        <li>
-                            <a href="#">Our blog</a>
-                        </li>
-                        <li>
-                            <a href="#">Contact us</a>
-                        </li>
-                        <li>
-                            <a href="#">Become a member</a>
-                        </li>
-                        <li>
-                            <a href="#">Case studies</a>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
-            <div>
-                <h3>Recent products</h3>
+    <!-- beginning of footer section -->
+    <footer>
+        <div>
+            <img src="./assets/logo-white.png">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum amet a non sapiente perspiciatis. Dignissimos amet quidem modi sapiente!</p>
+            <nav>
                 <ul>
                     <li>
-                        <div class="">
-                            <img src="./assets/product8.jpeg" alt="#">
-                        </div>
-                        <div>
-                            <p>Fresh vegetable</p>
-                            <p>$13</p>
-                        </div>
+                        <a href="#"></a>
                     </li>
                     <li>
-                        <div class="">
-                            <img src="./assets/product7.jpeg" alt="#">
-                        </div>
-                        <div>
-                            <p>Fresh fruit</p>
-                            <p>$13</p>
-                        </div>
+                        <a href="#"></a>
                     </li>
                     <li>
-                        <div class="">
-                            <img src="./assets/product5.jpeg" alt="#">
-                        </div>
-                        <div>
-                            <p>Fresh bean</p>
-                            <p>$13</p>
-                        </div>
+                        <a href="#"></a>
+                    </li>
+                    <li>
+                        <a href="#"></a>
+                    </li>
+                    <li>
+                        <a href="#"></a>
                     </li>
                 </ul>
-            </div>
-            <div>
-                <h3>Subscribe</h3>
-                <h4>Address:</h4>
-                <p>5919 Trussville Crossings Pkwy <br> Birmingham AL 35235</p>
-                <h4>Phone</h4>
-                <p>+88016888005654</p>
-                <form action="#" method="#" name="subscribeForm">
-                    <label for ="email"></label>
-                    <input type="text" id="email" class="email" name="email" placeholder="Enter Email...">
-                </form>
-            </div>
-            <p>Coded by <a href="#">Erika David</a>. Copyright &#169 <a href="https://www.junocollege.com" target="_blank">Juno College</a>. All rights reserved.</p>
-        </footer>
-    </main>
+            </nav>
+        </div>
+        <div>
+            <h3>Quick links</h3>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#">About us</a>
+                    </li>
+                    <li>
+                        <a href="#">Our product</a>
+                    </li>
+                    <li>
+                        <a href="#">Our blog</a>
+                    </li>
+                    <li>
+                        <a href="#">Contact us</a>
+                    </li>
+                    <li>
+                        <a href="#">Become a member</a>
+                    </li>
+                    <li>
+                        <a href="#">Case studies</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+        <div>
+            <h3>Recent products</h3>
+            <ul>
+                <li>
+                    <div class="">
+                        <img src="./assets/product8.jpeg" alt="#">
+                    </div>
+                    <div>
+                        <p>Fresh vegetable</p>
+                        <p>$13</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="">
+                        <img src="./assets/product7.jpeg" alt="#">
+                    </div>
+                    <div>
+                        <p>Fresh fruit</p>
+                        <p>$13</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="">
+                        <img src="./assets/product5.jpeg" alt="#">
+                    </div>
+                    <div>
+                        <p>Fresh bean</p>
+                        <p>$13</p>
+                    </div>
+                </li>
+            </ul>
+        </div>
+        <div>
+            <h3>Subscribe</h3>
+            <h4>Address:</h4>
+            <p>5919 Trussville Crossings Pkwy <br> Birmingham AL 35235</p>
+            <h4>Phone</h4>
+            <p>+88016888005654</p>
+            <form action="#" method="#" name="subscribeForm">
+                <label for ="email"></label>
+                <input type="text" id="email" class="email" name="email" placeholder="Enter Email...">
+            </form>
+        </div>
+        <p>Coded by <a href="#">Erika David</a>. Copyright &#169 <a href="https://www.junocollege.com" target="_blank">Juno College</a>. All rights reserved.</p>
+    </footer>
+    <!-- end of about section -->
 </body>
 </html>
