added comments re intial concerns of elements used

--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
                     <h2>Our gallery</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, tempore molestiae dolor cupiditate blanditiis accusantium?</p>
                     <div>
+                        <!-- are these actually buttons or should this be a nav? -->
                         <button>All</button>
                         <button>Business</button>
                         <button>Development</button>
@@ -266,9 +267,10 @@
                 <img src="./assets/logo-white.png">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum amet a non sapiente perspiciatis. Dignissimos amet quidem modi sapiente!</p>
                 <nav>
+                    <!-- social icon svgs not loading / research it / ask mentor/instructor-->
                     <ul>
                         <li>
-                            <a href="#"></a>
+                            <a href="#"></a>class: "poo" div div div ref:poo yes
                         </li>
                         <li>
                             <a href="#"></a>
@@ -343,12 +345,15 @@
                 </ul>
             </div>
             <div>
+                <!-- should you use an address tag in this column? -->
                 <h3>Subscribe</h3>
                 <h4>Address:</h4>
-                <p>5919 Trussville Crossings Pkwy <br> Birmingham AL 35235</p>
+                <!-- comma in this address suggests <br> should be applied? -->
+                <p>5919 Trussville Crossings Pkwy, <br> Birmingham AL 35235</p>
                 <h4>Phone</h4>
                 <p>+88016888005654</p>
                 <form action="#" method="#" name="subscribeForm">
+                    <!-- look up sr-only for blank label -->
                     <label for ="email"></label>
                     <input type="text" id="email" class="email" name="email" placeholder="Enter Email...">
                 </form>
