--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
                     </div>
                 </div>
                 <div class="mainGallery">
+                    <!-- is ul the right choice here or should you apply a div? -->
                     <ul class="col3">
                         <li>
                             <img src="./assets/gallery1.jpg" alt="">
