updated shop product section

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <!-- end of about section -->
 
             <!-- beginning of product section -->
-            <section id="products" class="product">
+            <section id="shopProducts" class="shopProducts">
                 <div>
                     <h2>Our products</h2>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla amet exercitationem itaque est nihil mollitia.</p>
