--- a/index.html
+++ b/index.html
@@ -268,22 +268,56 @@
                 <img src="./assets/logo-white.png">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum amet a non sapiente perspiciatis. Dignissimos amet quidem modi sapiente!</p>
                 <nav>
-                    <!-- social icon svgs not loading / research it / ask mentor/instructor-->
+                    <!-- need to figure out styling for social media icons and proper svg indentation-->
                     <ul>
                         <li>
-                            <a href="#"></a>class: "poo" div div div ref:poo yes
+                            <a href="#">
+                                <svg viewBox="0 0 25 48" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                    <title>Facebook</title>
+                                    <desc>Created with Sketch.</desc>
+                                    <defs></defs>
+                                    <g id="Page-1" stroke="#207200" stroke-width="1" fill="#207200" fill-rule="evenodd">
+                                    <g id="Social-Icons---Isolated" transform="translate(-176.000000, -55.000000)" fill="#4460A0">
+                                    <path d="M200.78439,55.3395122 L200.78439,62.9141463 L196.28878,62.9258537 C192.764878,62.9258537 192.085854,64.6 192.085854,67.0468293 L192.085854,72.4673171 L200.48,72.4673171 L199.39122,80.9434146 L192.085854,80.9434146 L192.085854,103 L183.329951,103 L183.329951,80.9434146 L176,80.9434146 L176,72.4673171 L183.329951,72.4673171 L183.329951,66.2156098 C183.329951,58.9570732 187.754146,55 194.24,55 C197.331902,55 200,55.2341463 200.78439,55.3395122 Z" id="Facebook" style="fill: rgb(255, 255, 255);"></path>
+                                    </g>
+                                    </g>
+                                </svg>
+                            </a>
                         </li>
                         <li>
-                            <a href="#"></a>
+                            <a href="#">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#207200" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-instagram"><rect x="2" y="2" width="20" height="20" rx="5" ry="5" id="id_128" style="stroke: rgb(255, 255, 255);"></rect><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z" id="id_129" style="stroke: rgb(255, 255, 255);"></path><line x1="17.5" y1="6.5" x2="17.5" y2="6.5" id="id_130" style="stroke: rgb(255, 255, 255);"></line></svg>
+                            </a>
                         </li>
                         <li>
-                            <a href="#"></a>
+                            <a href="#">
+                                <svg viewBox="0 0 48 34" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                    <title>Youtube</title>
+                                    <desc>Created with Sketch.</desc>
+                                    <defs></defs>
+                                    <g id="Page-1" stroke="#207200" stroke-width="1" fill="#207200" fill-rule="evenodd">
+                                    <g id="Social-Icons---Isolated" transform="translate(-164.000000, -510.000000)" fill="#FF0002">
+                                    <path d="M183.044,533.269916 L183.0425,519.687742 L196.0115,526.502244 L183.044,533.269916 Z M211.52,517.334163 C211.52,517.334163 211.0505,514.003199 209.612,512.536366 C207.7865,510.610299 205.7405,510.601235 204.803,510.489448 C198.086,510 188.0105,510 188.0105,510 L187.9895,510 C187.9895,510 177.914,510 171.197,510.489448 C170.258,510.601235 168.2135,510.610299 166.3865,512.536366 C164.948,514.003199 164.48,517.334163 164.48,517.334163 C164.48,517.334163 164,521.246723 164,525.157773 L164,528.82561 C164,532.73817 164.48,536.64922 164.48,536.64922 C164.48,536.64922 164.948,539.980184 166.3865,541.447016 C168.2135,543.373084 170.612,543.312658 171.68,543.513574 C175.52,543.885191 188,544 188,544 C188,544 198.086,543.984894 204.803,543.495446 C205.7405,543.382148 207.7865,543.373084 209.612,541.447016 C211.0505,539.980184 211.52,536.64922 211.52,536.64922 C211.52,536.64922 212,532.73817 212,528.82561 L212,525.157773 C212,521.246723 211.52,517.334163 211.52,517.334163 L211.52,517.334163 Z" id="Youtube" style="fill: rgb(255, 255, 255);"></path>
+                                    </g>
+                                    </g>
+                                </svg>
+                            </a>
                         </li>
                         <li>
-                            <a href="#"></a>
-                        </li>
-                        <li>
-                            <a href="#"></a>
+                            <a href="#">
+                                <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
+                                    <path style="fill: #207200;" d="M512,97.248c-19.04,8.352-39.328,13.888-60.48,16.576c21.76-12.992,38.368-33.408,46.176-58.016
+                                        c-20.288,12.096-42.688,20.64-66.56,25.408C411.872,60.704,384.416,48,354.464,48c-58.112,0-104.896,47.168-104.896,104.992
+                                        c0,8.32,0.704,16.32,2.432,23.936c-87.264-4.256-164.48-46.08-216.352-109.792c-9.056,15.712-14.368,33.696-14.368,53.056
+                                        c0,36.352,18.72,68.576,46.624,87.232c-16.864-0.32-33.408-5.216-47.424-12.928c0,0.32,0,0.736,0,1.152
+                                        c0,51.008,36.384,93.376,84.096,103.136c-8.544,2.336-17.856,3.456-27.52,3.456c-6.72,0-13.504-0.384-19.872-1.792
+                                        c13.6,41.568,52.192,72.128,98.08,73.12c-35.712,27.936-81.056,44.768-130.144,44.768c-8.608,0-16.864-0.384-25.12-1.44
+                                        C46.496,446.88,101.6,464,161.024,464c193.152,0,298.752-160,298.752-298.688c0-4.64-0.16-9.12-0.384-13.568
+                                        C480.224,136.96,497.728,118.496,512,97.248z" id="id_101"></path>
+                                    <g>
+                                    </g>
+                                </svg>
+                            </a>
                         </li>
                     </ul>
                 </nav>
