added classes to about section, removed extra div in shop section, corrected hero wrapper placement, fixed background image position, corrected indentation in gallery section

--- a/index.html
+++ b/index.html
@@ -40,14 +40,16 @@
                     </ul>
                 </div>
             </nav>
-            <div class="hero wrapper">
-                <div class="textContainer">
-                    <h1>Providing Tasty & Healthy Food</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum alias provident quas beatae libero sint ducimus, possimus tenetur quis dolor ipsam voluptatem voluptas vel. Totam doloremque ullam magnam quidem! Fugit?</p>
-                    <button>Shop Now</button>
-                </div>
-                <div class="imageContainer">
-                    <img src="./assets/header/header.png" alt="#">
+            <div class="hero">
+                <div class="wrapper">
+                    <div class="textContainer">
+                        <h1>Providing Tasty & Healthy Food</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum alias provident quas beatae libero sint ducimus, possimus tenetur quis dolor ipsam voluptatem voluptas vel. Totam doloremque ullam magnam quidem! Fugit?</p>
+                        <button>Shop Now</button>
+                    </div>
+                    <div class="imageContainer">
+                        <img src="./assets/header/header.png" alt="#">
+                    </div>
                 </div>
             </div>
         </div>
@@ -59,7 +61,7 @@
         <!-- beginning of about section -->
         <section id="about" class="about">
             <div class="wrapper">
-                <div class="textContainer">
+                <div class="textContainer aboutText">
                     <h2>About us</h2>
                     <h3>Providing Best Organic Products.</h3>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus porro eveniet sit tempora? Minus sunt quidem libero, reprehenderit vel illo commodi laborum tenetur error deleniti perferendis ipsum, quo autem atque!</p>
@@ -67,7 +69,7 @@
                     <button>Shop Now</buutton>
                 </div>
                 <div class="textContainer">
-                    <p>We've been providing the best best service for 20 years.</p>
+                    <p class="aboutFact">We've been providing the best service for 20 years.</p>
                 </div>
             </div>
         </section>
@@ -75,12 +77,12 @@
 
             <!-- beginning of product section -->
             <section id="shopProducts" class="shopProducts">
-                <div>
-                    <h2>Our products</h2>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla amet exercitationem itaque est nihil mollitia.</p>
-                </div>
-                <div>
-                    <ul>
+                <div class="wrapper">
+                    <div>
+                        <h2>Our products</h2>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla amet exercitationem itaque est nihil mollitia.</p>
+                    </div>
+                    <ul class="productGallery">
                         <li>
                             <div class="imageContainer">
                                 <img src="./assets/product1.jpeg" alt="#">
@@ -168,10 +170,10 @@
                                 <button>Add to cart</button>
                             </div>
                         </li>
-                    </ul>
-                </div>
-                <div>
-                    <button>Load more</button>
+                    </div>
+                    <div>
+                        <button>Load more</button>
+                    </div>
                 </div>
             </section>
             <!-- end of about section -->
