reset button class names

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <h3>Providing Best Organic Products.</h3>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus porro eveniet sit tempora? Minus sunt quidem libero, reprehenderit vel illo commodi laborum tenetur error deleniti perferendis ipsum, quo autem atque!</p>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora, modi fuga laudantium adipisci incidunt voluptate consequatur eveniet minus voluptatibus id?</p>
-                    <button>Shop Now</buutton>
+                    <button>Shop Now</button>
                 </div>
                 <div class="textContainer">
                     <p class="aboutFact">We've been providing the best service for 20 years.</p>
@@ -91,7 +91,7 @@
                                 <h3>Mix Vegetables</h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                                 <p>$370 <span>$350</span></p>
-                                <button>Add to cart</button>
+                                <button class="btnVar2">Add to cart</button>
                             </div>
                         </li><li>
                             <div class="imageContainer">
@@ -101,7 +101,7 @@
                                 <h3>Mix Vegetables</h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                                 <p>$370 <span>$350</span></p>
-                                <button>Add to cart</button>
+                                <button class="btnVar2">Add to cart</button>
                             </div>
                         </li>
                         <li>
@@ -112,7 +112,7 @@
                                 <h3>Mix Vegetables</h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                                 <p>$370 <span>$350</span></p>
-                                <button>Add to cart</button>
+                                <button class="btnVar2">Add to cart</button>
                             </div>
                         </li>
                         <li>
@@ -123,7 +123,7 @@
                                 <h3>Mix Vegetables</h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                                 <p>$370 <span>$350</span></p>
-                                <button>Add to cart</button>
+                                <button class="btnVar2">Add to cart</button>
                             </div>
                         </li>
                         <li>
@@ -134,7 +134,7 @@
                                 <h3>Mix Vegetables</h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                                 <p>$370 <span>$350</span></p>
-                                <button>Add to cart</button>
+                                <button class="btnVar2">Add to cart</button>
                             </div>
                         </li>
                         <li>
@@ -145,7 +145,7 @@
                                 <h3>Mix Vegetables</h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                                 <p>$370 <span>$350</span></p>
-                                <button>Add to cart</button>
+                                <button class="btnVar2">Add to cart</button>
                             </div>
                         </li>
                         <li>
@@ -156,7 +156,7 @@
                                 <h3>Mix Vegetables</h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                                 <p>$370 <span>$350</span></p>
-                                <button>Add to cart</button>
+                                <button class="btnVar2">Add to cart</button>
                             </div>
                         </li>
                         <li>
@@ -167,12 +167,12 @@
                                 <h3>Mix Vegetables</h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                                 <p>$370 <span>$350</span></p>
-                                <button>Add to cart</button>
+                                <button class="btnVar2">Add to cart</button>
                             </div>
                         </li>
                     </div>
                     <div>
-                        <button>Load more</button>
+                        <button class="primaryBtn">Load more</button>
                     </div>
                 </div>
             </section>
@@ -185,11 +185,11 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, tempore molestiae dolor cupiditate blanditiis accusantium?</p>
                     <div>
                         <!-- are these actually buttons or should this be a nav? -->
-                        <button>All</button>
-                        <button>Business</button>
-                        <button>Development</button>
-                        <button>Technology</button>
-                        <button>Agency</button>
+                        <button class="btnVar3">All</button>
+                        <button class="btnVar3">Business</button>
+                        <button class="btnVar3">Development</button>
+                        <button class="btnVar3">Technology</button>
+                        <button class="btnVar3">Agency</button>
                     </div>
                 </div>
                 <div class="mainGallery">
@@ -226,7 +226,7 @@
                     </ul>
                 </div>
                 <div class="bottomGallery">
-                    <button>load more</button>
+                    <button class="primaryBtn">load more</button>
                 </div>
             </section>
             <!-- end of gallery section -->
@@ -245,7 +245,7 @@
                         <div>
                             <h3>Lorem ipsum, dolor sit amet consectetur adipisicing.</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime modi quo dolor!</p>
-                            <button>Read more</button>
+                            <button class="btnVar4">Read more</button>
                         </div>
                     </li>
                     <li>
@@ -255,7 +255,7 @@
                         <div>
                             <h3>Lorem ipsum, dolor sit amet consectetur adipisicing.</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime modi quo dolor!</p>
-                            <button>Read more</button>
+                            <button class="btnVar4">Read more</button>
                         </div>
                     </li>
                     <li>
@@ -265,7 +265,7 @@
                         <div>
                             <h3>Lorem ipsum, dolor sit amet consectetur adipisicing.</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime modi quo dolor!</p>
-                            <button>Read more</button>
+                            <button class="btnVar4">Read more</button>
                         </div>
                     </li>
                 </ul>
