fixed ul tag in shop section

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <!-- beginning of product section -->
             <section id="shopProducts" class="shopProducts">
                 <div class="wrapper">
-                    <div>
+                    <div class="shopText">
                         <h2>Our products</h2>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla amet exercitationem itaque est nihil mollitia.</p>
                     </div>
@@ -90,7 +90,7 @@
                             <div class="productInfoContainer">
                                 <h3>Mix Vegetables</h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                                <p>$370 <span>$350</span></p>
+                                <p class="price">$370 <span>$350</span></p>
                                 <button class="btnVar2">Add to cart</button>
                             </div>
                         </li><li>
@@ -100,7 +100,7 @@
                             <div class="productInfoContainer">
                                 <h3>Mix Vegetables</h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                                <p>$370 <span>$350</span></p>
+                                <p class="price">$370 <span>$350</span></p>
                                 <button class="btnVar2">Add to cart</button>
                             </div>
                         </li>
@@ -111,7 +111,7 @@
                             <div class="productInfoContainer">
                                 <h3>Mix Vegetables</h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                                <p>$370 <span>$350</span></p>
+                                <p class="price">$370 <span>$350</span></p>
                                 <button class="btnVar2">Add to cart</button>
                             </div>
                         </li>
@@ -122,7 +122,7 @@
                             <div class="productInfoContainer">
                                 <h3>Mix Vegetables</h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                                <p>$370 <span>$350</span></p>
+                                <p class="price">$370 <span>$350</span></p>
                                 <button class="btnVar2">Add to cart</button>
                             </div>
                         </li>
@@ -133,7 +133,7 @@
                             <div class="productInfoContainer">
                                 <h3>Mix Vegetables</h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                                <p>$370 <span>$350</span></p>
+                                <p class="price">$370 <span>$350</span></p>
                                 <button class="btnVar2">Add to cart</button>
                             </div>
                         </li>
@@ -144,7 +144,7 @@
                             <div class="productInfoContainer">
                                 <h3>Mix Vegetables</h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                                <p>$370 <span>$350</span></p>
+                                <p class="price">$370 <span>$350</span></p>
                                 <button class="btnVar2">Add to cart</button>
                             </div>
                         </li>
@@ -155,7 +155,7 @@
                             <div class="productInfoContainer">
                                 <h3>Mix Vegetables</h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                                <p>$370 <span>$350</span></p>
+                                <p class="price">$370 <span>$350</span></p>
                                 <button class="btnVar2">Add to cart</button>
                             </div>
                         </li>
@@ -166,12 +166,12 @@
                             <div class="productInfoContainer">
                                 <h3>Mix Vegetables</h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                                <p>$370 <span>$350</span></p>
+                                <p class="price">$370 <span>$350</span></p>
                                 <button class="btnVar2">Add to cart</button>
                             </div>
                         </li>
-                    </div>
-                    <div>
+                    </ul>
+                    <div class="shopBtn">
                         <button class="primaryBtn">Load more</button>
                     </div>
                 </div>
