added wrapper to gallery section and fixed gallery section indentation

--- a/index.html
+++ b/index.html
@@ -180,53 +180,55 @@
 
             <!-- beginning of gallery section -->
             <section id="gallery" class="gallery">
-                <div class="topGallery">
-                    <h2>Our gallery</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, tempore molestiae dolor cupiditate blanditiis accusantium?</p>
-                    <div>
-                        <!-- are these actually buttons or should this be a nav? -->
-                        <button class="btnVar3">All</button>
-                        <button class="btnVar3">Business</button>
-                        <button class="btnVar3">Development</button>
-                        <button class="btnVar3">Technology</button>
-                        <button class="btnVar3">Agency</button>
+                <div class="wrapper">
+                    <div class="topGallery">
+                        <h2>Our gallery</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, tempore molestiae dolor cupiditate blanditiis accusantium?</p>
+                        <div>
+                            <!-- are these actually buttons or should this be a nav? -->
+                            <button class="btnVar3">All</button>
+                            <button class="btnVar3">Business</button>
+                            <button class="btnVar3">Development</button>
+                            <button class="btnVar3">Technology</button>
+                            <button class="btnVar3">Agency</button>
+                        </div>
                     </div>
-                </div>
-                <div class="mainGallery">
-                    <!-- is ul the right choice here or should you apply a div? -->
-                    <ul class="col3">
-                        <li>
-                            <img src="./assets/gallery1.jpg" alt="">
-                        </li>
-                        <li>
-                            <img src="./assets/gallery2.jpg" alt="">
-                        </li>
-                        <li>
-                            <img src="./assets/gallery3.jpg" alt="">
-                        </li>
-                    </ul>
-                    <ul class="col2">
-                        <li>
-                            <img src="./assets/gallery4.jpg" alt="">
-                        </li>
-                        <li>
-                            <img src="./assets/gallery5.jpg" alt="">
-                        </li>
-                    </ul>
-                    <ul class="col3">
-                        <li>
-                            <img src="./assets/gallery6.jpg" alt="">
-                        </li>
-                        <li>
-                            <img src="./assets/gallery7.jpg" alt="">
-                        </li>
-                        <li>
-                            <img src="./assets/gallery8.jpg" alt="">
-                        </li>
-                    </ul>
-                </div>
-                <div class="bottomGallery">
-                    <button class="primaryBtn">load more</button>
+                    <div class="mainGallery">
+                        <!-- is ul the right choice here or should you apply a div? -->
+                        <ul class="col3">
+                            <li>
+                                <img src="./assets/gallery1.jpg" alt="">
+                            </li>
+                            <li>
+                                <img src="./assets/gallery2.jpg" alt="">
+                            </li>
+                            <li>
+                                <img src="./assets/gallery3.jpg" alt="">
+                            </li>
+                        </ul>
+                        <ul class="col2">
+                            <li>
+                                <img src="./assets/gallery4.jpg" alt="">
+                            </li>
+                            <li>
+                                <img src="./assets/gallery5.jpg" alt="">
+                            </li>
+                        </ul>
+                        <ul class="col3">
+                            <li>
+                                <img src="./assets/gallery6.jpg" alt="">
+                            </li>
+                            <li>
+                                <img src="./assets/gallery7.jpg" alt="">
+                            </li>
+                            <li>
+                                <img src="./assets/gallery8.jpg" alt="">
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="bottomGallery">
+                        <button class="primaryBtn">load more</button>
+                    </div>
                 </div>
             </section>
             <!-- end of gallery section -->
